# metalkit-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_texture_loader_smoke.rs  02_mesh_bridge_smoke.rs  03_model_io_integration_smoke.rs  04_mesh_buffer_allocator_smoke.rs  05_view_smoke.rs
src/: error.rs  lib.rs  mesh.rs  mesh_buffer.rs  mesh_buffer_allocator.rs  model.rs  model_io_integration.rs  private.rs  submesh.rs  texture.rs  texture_loader.rs  view.rs
src/ffi/: core.rs  mesh.rs  mesh_buffer.rs  mesh_buffer_allocator.rs  mod.rs  model_io_integration.rs  submesh.rs  texture_loader.rs  view.rs
swift-bridge/: Package.swift
swift-bridge/Sources/MetalKitBridge/: Core.swift  MTKMesh.swift  MTKMeshBuffer.swift  MTKMeshBufferAllocator.swift  MTKSubmesh.swift  MTKView.swift  Model.swift  TextureLoader.swift
swift-bridge/Sources/MetalKitBridge/include/: MetalKitBridge.h  module.modulemap
tests/: mesh.rs  mesh_buffer.rs  mesh_buffer_allocator.rs  model_io_integration.rs  submesh.rs  texture_loader.rs  view.rs
tests/common/: mod.rs
