[package]
name = "metalkit-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/metalkit-rs"
repository = "https://github.com/doom-fish/metalkit-rs"
description = "Safe Rust bindings for Apple's MetalKit framework — texture loading and Model I/O mesh bridging on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["metalkit", "metal", "modelio", "macos", "apple"]
categories = ["api-bindings", "graphics", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "metalkit"
crate-type = ["lib"]

[features]
default = []
cargo-clippy = []

[dependencies]
libc = "0.2"
apple-cf = { path = "../apple-cf-rs", version = ">=0.4.0, <0.6", features = ["cg"] }
apple-metal = { path = "../apple-metal-rs", version = ">=0.5.0, <0.6" }

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_texture_loader_smoke"

[[example]]
name = "02_mesh_bridge_smoke"

[profile.release]
debug = "full"
strip = "none"
